Changed the way versions are stored